Fix toggler styling: alignment

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -53,7 +53,8 @@
         &-x, &-check {
             right: 8px;
             width: 15px;
-            height: 55px;
+            height: 100%;
+            line-height: inherit;
             svg {
                 width: 100%;
                 height: 100%;
